# cc_usage

./: .gitignore  CLAUDE.md  DOCS-INDEX.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/browser-worker/: package.json
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  ring_icon.rs  state_file.rs  tray.rs
apps/desktop/src-tauri/src/usage/: adapters.rs  config.rs  mod.rs  refresh.rs
apps/usage-daemon/: package.json
config/: sources.custom.json
dev-docs/: BACKLOG.md  DONE.md  README.md
dev-docs/browser-worker/: 2026-04-10-codex-cloud-usage-job.md  README.md
dev-docs/desktop/: 2026-04-10-tauri-default-materialized-state-shape.md  2026-04-10-three-source-click-expand-ui.md  2026-04-11-lsuielement-dock-hide.md  2026-04-11-sidecar-integration.md  2026-04-11-tray-icon-popover.md  2026-04-15-merge-daemon-into-tauri.md  2026-04-18-dual-gateway-multi-account-monitor.md  2026-04-18-dynamic-window-sizing.md  2026-04-18-popover-size-fit.md  2026-04-18-popover-sorting-by-pinned-account.md  README.md
dev-docs/shared/: 2026-04-10-materialized-history-contract.md  README.md
dev-docs/usage-daemon/: 2026-04-10-codex-cloud-usage-integration.md  2026-04-11-local-config-file.md  README.md  (+4 more)
docs/: api.md  architecture.md  development.md  plan-three-source-click-expand-usage-monitor.md
project-docs/: README.md  browser-worker.md  desktop.md  shared.md  usage-daemon.md
schemas/: README.md
(+60 files in other folders)
