[package]
name = "vibe-monitor-shell"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-shell = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
